# rm-comments

./: CLAUDE.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  llms.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml  release.yml
hooks/: hooks.json
scripts/: update-brew-formula.sh
skills/rm-comments/: SKILL.md
skills/strip-comments/: SKILL.md
src/: languages.rs  lib.rs  main.rs
tests/: cli.rs  edge.rs  golden.rs  policy.rs
tests/fixtures/bash/: expected.sh  input.sh
tests/fixtures/c/: expected.c  input.c
tests/fixtures/cpp/: expected.cpp  input.cpp
tests/fixtures/csharp/: expected.cs  input.cs
tests/fixtures/css/: expected.css  input.css
tests/fixtures/go/: expected.go  input.go
tests/fixtures/html/: expected.html  input.html
tests/fixtures/java/: expected.java  input.java
tests/fixtures/javascript/: expected.js  input.js
tests/fixtures/php/: expected.php  input.php
tests/fixtures/python/: expected.py  input.py
tests/fixtures/ruby/: expected.rb  input.rb
tests/fixtures/rust/: expected.rs  input.rs
tests/fixtures/toml/: expected.toml  input.toml
tests/fixtures/tsx/: expected.tsx  input.tsx
tests/fixtures/typescript/: expected.ts  input.ts
tests/fixtures/yaml/: expected.yml  input.yml
zed/: keymap.json  tasks.json
